code style improvement